Bug 598242 - Normalize WebM buffered TimeRanges. r=kinetik a=blocking2.0