content/media/nsBuiltinDecoderStateMachine.h
@@ -245,6 +245,11 @@ public:
     mReader->NotifyDataArrived(aBuffer, aLength, aOffset);
   }
 
+  PRInt64 GetEndMediaTime() const {
+    mDecoder->GetMonitor().AssertCurrentThreadIn();
+    return mEndTime;
+  }
+
 protected:
 
   // Returns the number of unplayed ms of audio we've got decoded and/or
@@ -476,9 +481,9 @@ protected:
   // Synchronised via the decoder monitor.
   PRPackedBool mBufferExhausted;
 
-  // PR_TRUE if mDuration has a value obtained from an HTTP header.
-  // Accessed on the state machine thread.
-  PRPackedBool mGotDurationFromHeader;
+  // PR_TRUE if mDuration has a value obtained from an HTTP header, or from
+  // the media index/metadata. Accessed on the state machine thread.
+  PRPackedBool mGotDurationFromMetaData;
     
   // PR_FALSE while decode threads should be running. Accessed on audio, 
   // state machine and decode threads. Syncrhonised by decoder monitor.
